# mas-failure-attribution

./: .gitignore  LICENSE  README.md  config.ini  main.py  pyproject.toml
adapter/: base_adapter.py  middleware.py
adapter/MagenticOne/: __init__.py  attack_injection.py  core.py  event_dump.py  magentic_runtime.py  requirements.txt
adapter/MagenticOne/dataset/gaia_dataset_raw/: metadata.level1.parquet  metadata.level2.parquet  metadata.level3.parquet  metadata.parquet
adapter/MagenticOne/middlewares/: __init__.py  replay.py
adapter/MetaGPT/: core.py  utils.py
adapter/MetaGPT/middlewares/: engineer.py  observe.py  team_leader.py  terminal.py  think.py
dataset/: metadata.parquet
dataset/code/: kodcode-light-rl-10k-hard.parquet
model/: schema.py
monitor/: attack_monitor.py  base_monitor.py
pipeline/coding/: attack.py  diagnose.py  eval.py  run.py
pipeline/math/: eval.py  run.py
pipeline/multimodal_task/: multimodal_eval.py
runs/magentic_output/metadata.level1/round_0/: eval_metadata.level1.json
runs/magentic_output/metadata.level1/round_0/e1fc63a2-da7a-432f-be78-7c4a95598703/: log.json
runs/magentic_workspace/kodcode/round_0/Leetcode_32641_I/: solution.py
runs/magentic_workspace/kodcode/round_0/Leetcode_32641_I/exp_out/: magentic_trace.json
runs/result_example/: eval_kodcode.json  log.json  magentic_trace.json  solution.py
scripts/: repro_empty_model_prediction.py
test/: main.py  te_mg_2_parquet.py
utils/: common.py  config.py  fault_library.py  logging.py  magentic_trace_recovery.py  prompts.py  task_record.py
